objects/Stobject1__c.object
<CustomObject>
    <description>Edited</description>
    <fields>
        <fullName>Phonefileld__c</fullName>
        <description>Edited for 1</description>
        <label>Phonefileld</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Texfield1__c</fullName>
        <label>Texfield1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Textfield2__c</fullName>
        <label>Textfield2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>textfield3__c</fullName>
        <label>textfield3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Stobject1</label>
    <nameField>
        <label>Stobject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stobject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>